# Start-Munich-Hack-AskLeo

./: .gitignore  README.md  prompts (1).py
backend/: configurations.py  example.env  main.py  pyproject.toml  test.ipynb  test.py
backend/data/: product.json
backend/langgraph_agent/: agent_communication.py  client.py  graph.py  prompts.py
backend/langgraph_agent/generic/: __init__.py  tool_runner.py  tool_status.py
backend/langgraph_agent/graphs/: graph_builder.py  mcp_chatbot_graph.py
backend/langgraph_agent/llms/: anthropic_llm.py
backend/langgraph_agent/mcps/: dup_mcp_config.json  mcp_config.json  tool_loader.py
backend/langgraph_agent/mcps/local_servers/: product.py
backend/langgraph_agent/nodes/: mcp_chatbot_node.py
backend/langgraph_agent/states/: chatbotState.py
backend/langgraph_agent/tools/: custom_tools.py
react_frontend/: package-lock.json  package.json
react_frontend/src/: App.css  App.jsx  constants.js
react_frontend/src/components/: ChatWindow.jsx  FloatingChat.css  FloatingChat.jsx  ProductLanding.css  ProductLanding.jsx  Sidebar.jsx
