[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langchain>=1.0.7",
    "langchain-google-genai>=3.0.3",
    "langchain-groq>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.13",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
    "duckdb>=1.2.2",
    "deepagents>=0.2.7",
    "tavily-python>=0.7.13",
    "langchain-anthropic>=0.1.1",
    "langchain-tavily>=0.2.13",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
]

[dependency-groups]
dev = ["ipykernel>=7.1.0"]
